Fixing a z-index bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,6 +8,7 @@
   box-shadow: 0px -20px 25px 10px rgba(0,0,0,0.3);
   position: fixed;
   width: 100vw;
+  z-index: 10;
 }
 
 .site-nav {
@@ -140,6 +141,7 @@
           flex-flow: row nowrap;
   margin: auto;
   padding-top: 75px;
+  z-index: 5;
 }
 
 .page-heading {
